--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=configserver
-spring.profiles.active=native
+spring.profiles.active=git
 server.port=8071
-spring.cloud.config.server.native.search-locations=classpath:/config
+#spring.cloud.config.server.native.search-locations=classpath:/config
 spring.cloud.config.server.git.uri=https://github.com/Tobi-java/config-server-properties.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
